--- a/package.json
+++ b/package.json
@@ -14,18 +14,28 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.6",
+    "apollo-server-lambda": "^2.19.1",
+    "cross-fetch": "^3.0.6",
+    "faunadb": "^4.0.0",
     "gatsby": "^2.26.1",
+    "gatsby-source-contentful": "^4.3.1",
+    "graphql": "^15.4.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "prettier": "2.2.1"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "git+https://github.com/gatsbyjs/gatsby-starter-hello-world.git"
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+  },
+  "homepage": "https://github.com/gatsbyjs/gatsby-starter-hello-world#readme",
+  "main": "Vcard.js",
+  "author": ""
 }
