--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "cross-fetch": "^3.0.6",
     "faunadb": "^4.0.0",
     "gatsby": "^2.26.1",
+    "gatsby-cli": "^2.16.2",
     "gatsby-source-contentful": "^4.3.1",
+    "gatsby-source-graphql": "^2.11.0",
     "graphql": "^15.4.0",
+    "netlify-cli": "^2.69.11",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "shortid": "^2.2.16"
