--- a/functions/Vcard/package.json
+++ b/functions/Vcard/package.json
@@ -7,5 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "apollo-server-lambda": "^2.19.1",
+    "axios": "^0.21.1",
+    "graphql": "^15.4.0"
+  }
 }
